--- a/public/stripe-return.html
+++ b/public/stripe-return.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <div class="container text-center py-5 px-3">
-    <h1 class="mb-5">Payment result</h1>
+    <h1 id="pageTitle" class="mb-5">Processing payment</h1>
 
     <div id="spinnerContainer" style="margin: 0 auto;">
         <div class="spinner-border text-primary mt-4" role="status">
@@ -57,9 +57,21 @@
         </div>
     </div>
 
-    <div id="stripeReturningContainer" class="d-none d-flex justify-content-center">
+    <div id="stripeSuccess" class="d-none d-flex justify-content-center">
         <div class="px-2" style="width: 650px;">
-            <div id="message"></div>
+            <h1><i class="bi bi-check-circle" style="color: rgb(25, 135, 84);"></i></h1>
+        </div>
+    </div>
+
+    <div id="stripeFailure" class="d-none d-flex justify-content-center">
+        <div class="px-2" style="width: 650px;">
+            <h1><i class="bi bi-exclamation-circle" style="color: rgb(220, 53, 69);"></i></h1>
+        </div>
+    </div>
+
+    <div class="d-none d-flex justify-content-center">
+        <div class="px-2" style="width: 650px;">
+            <p id="message"></p>
         </div>
     </div>
 </div>
@@ -68,6 +80,7 @@
     <div style="width: 600px;">
         <div class="d-grid gap-2">
             <a id="finishStripeButton" class="btn btn-primary btn-lg disabled" href="portfolio.html" role="button">Continue <i class="bi bi-arrow-right"></i></a>
+            <a id="failureStripeButton" class="d-none btn btn-primary btn-lg" href="onboarding-payment.html" role="button">Try again</a>
         </div>
     </div>
 </div>
@@ -108,27 +121,35 @@
                     switch (paymentIntent.status) {
                         case 'succeeded':
                             message.innerText = 'Success! Payment received.';
+                            $('#stripeSuccess').removeClass('d-none');
+                            $('#finishStripeButton').removeClass('disabled');
                             break;
 
                         case 'processing':
                             message.innerText = "Payment processing. We'll update you when payment is received.";
+                            $('#stripeSuccess').removeClass('d-none');
+                            $('#finishStripeButton').removeClass('disabled');
                             break;
 
                         case 'requires_payment_method':
                             message.innerText = 'Payment failed. Please try another payment method.';
+                            $('#stripeFailure').removeClass('d-none');
+                            $('#finishStripeButton').addClass('d-none');
+                            $('#failureStripeButton').removeClass('d-none');
                             // Redirect your user back to your payment page to attempt collecting
                             // payment again
                             break;
 
                         default:
                             message.innerText = 'Something went wrong.';
+                            $('#stripeFailure').removeClass('d-none');
+                            $('#finishStripeButton').addClass('d-none');
+                            $('#failureStripeButton').removeClass('d-none');
                             break;
                     }
 
-                    // Show the message, hide the spinner, and enable the button.
-                    $('#stripeReturningContainer').removeClass('d-none');
+                    // Hide the spinner in any event.
                     $('#spinnerContainer').addClass('d-none');
-                    $('#finishStripeButton').removeClass('disabled');
                 });
             }
         });
