All sorts of stuff

--- a/public/index.html
+++ b/public/index.html
@@ -60,20 +60,14 @@
               <h3 class="m-0">Goodist</h3>
             </a>
 
-            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            <!--<ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
               <li>
                 <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link text-secondary">
                   <i class="bi bi-house-fill" style="font-size: 1.25rem;"></i>
                   Home
                 </a>
               </li>
-              <!--<li>
-                <a href="#" class="d-flex flex-column justify-content-center align-items-center nav-link">
-                  <i class="bi bi-house-fill" style="font-size: 1.25rem;"></i>
-                  Impact
-                </a>
-              </li>-->
-            </ul>
+            </ul>-->
           </div>
         </div>
       </div>
