--- a/public/onboarding-payment.html
+++ b/public/onboarding-payment.html
@@ -148,7 +148,7 @@
                     })
                     .catch((error) => {
                         // The document probably doesn't exist.
-                        console.error("Error with stripeStart() cloud function: ", error);
+                        console.error("Error with cloud function: ", error);
                     });
             }
         });
